--- a/My Page/index.html
+++ b/My Page/index.html
@@ -39,8 +39,14 @@
       </div>
     </div>
     <div class="header3">
-      <div>
-        <img
+      <div class="bg2">
+        <img src="pic/bg2.png">
+      </div>
+      <div class="bg3">
+        <img src="pic/bg3.png">
+      </div>
+      <div class="ar3">
+        <img src="pic/ar3.png">
       </div>
     </div>
   </body>
