--- a/My Page/index.html
+++ b/My Page/index.html
@@ -45,7 +45,9 @@
       <div class="bg3">
         <img src="pic/bg3.png">
       </div>
-        <img src="pic/ar3.png" class="ar3">
+      <div>
+        <img src="pic/ar3.png">
+      </div>
     </div>
   </body>
 </html>
